--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Excel_prac_2.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Selector_prac_1.xaml\",\"orch_prac_7.xaml\",\"personalNumberReader.xaml\",\"ReplacingPlacholders_prac_6.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
